# burnin

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  example-config.toml  test-all-features.sh
.github/workflows/: ci.yml  release.yml
benches/: cpu_bench.rs
src/: lib.rs  main.rs
src/core/: config.rs  error.rs  hardware.rs  mod.rs  runner.rs  test.rs
src/reporters/: csv.rs  json.rs  mod.rs  text.rs
src/tests/: cpu.rs  memory.rs  mod.rs  network.rs  storage.rs  thermal.rs
tests/: integration_test.rs
