[package]
name = "burnin"
version = "0.1.0"
edition = "2021"
description = "A lightweight, single-binary CLI tool for system burn-in testing"
authors = ["Burnin Developers"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
chrono = "0.4"
sysinfo = "0.30"
num_cpus = "1.16"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
ctrlc = "3.4"
humantime = "2.1"
bytesize = "1.3"
indoc = "2.0"
colored = "2.1"
indicatif = "0.17"
log = "0.4"
simple_logger = "4.3"
rayon = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bench]]
name = "cpu_bench"
harness = false

[lib]
name = "burnin"
path = "src/lib.rs"

[[bin]]
name = "burnin"
path = "src/main.rs"
